2009-07-02:
===========

- Further work on packaging and jsdoc API reference. Everything should be 
working fine now.
- jsdoc comment fixes across several files.

2009-07-01:
===========

- Fixed the "swap fill / stroke colors" command. It now works - you can press 
X to swap the two colors.
- General fixes for undefined/unused variables across multiple JS files.
- Packaging scripts for generating the jsdoc API reference.
- Made demo1.html use the packaged PaintWeb script. I also added a timer, so 
I can check how long it takes to load PaintWeb.
- Minor fixes for the CSS images inliner script: don't try to inline external 
images, and include the "base64" string in the data URI.
- Fixed PaintWeb so that it loads successfully when running as a packaged build.  
Mainly I made it properly read the interface markup, and I made sure the screen 
resolution is detected even if the interface stylesheet is not yet loaded.  
Typically PaintWeb completes initialization before the style loads and that 
caused problems.
- Made minor code adjustments for jsdoc-toolkit.

2009-06-30:
===========

- Initial commit of the PaintWeb packager: a Makefile + some PHP scripts.
- Some cleanup (removed the old images).
- Now PaintWeb requires the configuration file to be set manually when 
integrated into other Web applications.
- Renamed the config.json file to config-example.json.
- Updated demo1.html to point to the build and the configuration file.

2009-06-29:
===========

- The color picker tool is now fixed and working well.
- Updated the guiColorInput: some code adjustments for the color picker and 
jsdoc comments.
- Updated the Color Mixer: some code adjustments for the color picker, and 
I also fixed a bug. When closing the floating panel using the X, the Color Mixer 
did not detect the change - it does now.
- New application event for the guiFloatingPanel: the 
guiFloatingPanelStateChange event. Huh, long name.