@@ -1,6 +1,6 @@
 $Author: Mihai Şucan $
 $URL: http://code.google.com/p/paintweb $
-$Date: 2009-07-02 20:19:01 +0300 $
+$Date: 2009-07-03 23:39:35 +0300 $
 
 Until the end of GSOC:
 
@@ -23,6 +23,7 @@ As quick as possible, after GSOC 2009:
   color space visualisation in the color mixer. I cannot reproduce the issue 
   with Google Chrome 3 on Linux.
 
+- implement the GUI improvements suggested by Olli Savolainen.
 - write more tutorials/articles about paintweb.
 - new tools: bucket, pencil v2 (avec pression).
 - toolRegister creates instances of tool objects automatically.
