@@ -1,0 +1,3 @@
+tinyMCE.addI18n('en.paintweb',{
+	editButton: 'Edit the image in PaintWeb'
+});
