@@ -2,7 +2,7 @@
  * © 2009 ROBO Design
  * http://www.robodesign.ro
  *
- * $Date: 2009-07-02 15:15:39 +0300 $
+ * $Date: 2009-07-04 22:47:32 +0300 $
  */
 
 /**
@@ -529,17 +529,17 @@ pwlib.appEvent.commandUnregister = function (id) {
  *
  * @augments pwlib.appEvent
  *
- * @param {String} dataURL The data: URL generated by the browser holding the 
+ * @param {String} dataURI The data URI generated by the browser holding the 
  * pixels of the image being saved, in PNG format.
  * @param {Number} width The image width.
  * @param {Number} height The image height.
  */
-pwlib.appEvent.imageSave = function (dataURL, width, height) {
+pwlib.appEvent.imageSave = function (dataURI, width, height) {
   /**
    * The image saved by the browser, using base64 encoding.
    * @type String
    */
-  this.dataURL = dataURL;
+  this.dataURI = dataURI;
 
   /**
    * Image width.
