@@ -17,7 +17,7 @@
  * along with PaintWeb.  If not, see <http://www.gnu.org/licenses/>.
  *
  * $URL: http://code.google.com/p/paintweb $
- * $Date: 2009-07-01 18:48:01 +0300 $
+ * $Date: 2009-07-04 19:54:16 +0300 $
  */
 
 /**
@@ -155,8 +155,8 @@ pwlib.tools.insertimg = function (app) {
     // Remember the URL.
     pwlib.extend(true, _self.constructor.prototype, {url: _self.url});
 
-    var host = _self.url.substr(7);
-    var pos = host.indexOf('/');
+    var host = _self.url.substr(7),
+        pos  = host.indexOf('/');
     if (pos > -1) {
       host = host.substr(0, pos);
     }
