@@ -1,3 +1,11 @@
+2009-07-04:
+===========
+
+- Implemented a new core function: PaintWeb.imageLoad().
+- Initial implementation of the TinyMCE plugin which nicely integrates PaintWeb 
+into TinyMCE. It works well in Opera, Firefox and Chrome. Remaining work is to 
+make it less ... flimsy, less error prone. Note that image save also works!
+
 2009-07-02:
 ===========
 
